--- a/3DRacingGame/Assembly-CSharp.csproj
+++ b/3DRacingGame/Assembly-CSharp.csproj
@@ -63,7 +63,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\AIController.cs" />
+    <Compile Include="Assets\Circuit.cs" />
     <Compile Include="Assets\Drive.cs" />
+    <Compile Include="Assets\PlayerController.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/Samet/Desktop/Unity/3DRacingGame/3DRacingGame/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
