--- a/3DRacingGame/Assembly-CSharp.csproj
+++ b/3DRacingGame/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\CenterOfMass.cs" />
     <Compile Include="Assets\Drive.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/Samet/Desktop/Unity/3DRacingGame/3DRacingGame/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
